# ncbi_gene_mcp_client

./: .gitignore  LICENSE  README.md  USAGE_EXAMPLES.md  demo_comprehensive.py  deploy.sh  pyproject.toml  requirements.txt  test_deployment.py  vercel.json  web_demo.py
api/: app.py  index.py  minimal.py  test.py
ncbi_gene_mcp_client/: __init__.py  bridge.py  cli.py  cli_old.py  main.py  mcp_server.py  models.py  web_app.py
ncbi_gene_mcp_client/templates/: about.html  api.html  base.html  error.html  gene_detail.html  index.html
tests/: __init__.py  test_main.py  test_main_old.py
